# spu

./: log.txt  refresh_compile_commands.sh
examples/python/: BUILD.bazel  simple_lr.py  test.py
examples/python/conf/: BUILD.bazel  mal3pc.json
examples/python/ml/jax_kmeans/: jax_kmeans.py
libspu/: spu.proto
libspu/mpc/: BUILD.bazel  factory.cc
libspu/mpc/aby3/: BUILD.bazel  conversion_test.cc
libspu/mpc/beaver/: BUILD.bazel  arithmetic.cc  arithmetic.h  boolean.cc  boolean.h  conversion.cc  conversion.h  io.cc  io.h  protocol.cc  protocol.h  protocol_test.cc  state.cc  state.h  state_test.cc  state_test.h  type.cc  type.h  utils.cc  utils.h  value.cc  value.h
libspu/mpc/spdzwisefield/: BUILD.bazel  arithmetic.cc  arithmetic.h  arithmetic_test.cc  boolean.cc  boolean.h  boolean_test.cc  circuit_test.cc  conversion.cc  conversion.h  conversion_test.cc  io.cc  io.h  object.h  protocol.cc  protocol_test.cc  state.cc  state.h  state_test.cc  type.h  type_test.cc  utils.cc  utils.cc.bak  utils.h  utils.h.bak  value.cc  value.h
spu/tests/: BUILD.bazel  jnp_spdzwisefield_r64_test.py
