# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//bazel:spu.bzl", "spu_cc_library", "spu_cc_test")

package(default_visibility = ["//visibility:public"])

spu_cc_library(
    name = "aby3",
    deps = [
        ":io",
        "//libspu/mpc/aby3:protocol",
    ],
)

spu_cc_library(
    name = "protocol",
    srcs = ["protocol.cc"],
    hdrs = ["protocol.h"],
    deps = [
        ":arithmetic",
        ":boolean",
        ":conversion",
        ":value",
        "//libspu/mpc/common:ab_kernels",
    ],
)

spu_cc_test(
    name = "protocol_test",
    srcs = ["protocol_test.cc"],
    deps = [
        ":protocol",
        "//libspu/mpc:api_test",
        "//libspu/mpc/common:ab_api_test",
    ],
)

spu_cc_test(
    name = "state_test",
    srcs = ["state_test.cc"],
    deps = [
        ":protocol",
        ":state",
        "//libspu/mpc/utils:simulate",
        "@com_google_googletest//:gtest",
    ],
)

spu_cc_test(
    name = "circuit_test",
    srcs = ["circuit_test.cc"],
    deps = [
        ":protocol",
        ":state",
        "//libspu/mpc/utils:simulate",
        "@com_google_googletest//:gtest",
    ],
)

spu_cc_test(
    name = "boolean_test",
    srcs = ["boolean_test.cc"],
    deps = [
        ":protocol",
        ":state",
        ":boolean",
        "//libspu/mpc/utils:simulate",
        "@com_google_googletest//:gtest",
    ],
)

spu_cc_library(
    name = "arithmetic",
    srcs = ["arithmetic.cc"],
    hdrs = ["arithmetic.h"],
    deps = [
        ":utils",
        ":type",
        ":value",
        ":state",
        "//libspu/core:trace",
        "//libspu/mpc/common:ab_api",
        "//libspu/mpc/common:communicator",
        "//libspu/mpc/common:prg_state",
        "//libspu/mpc/utils:circuits",
        "//libspu/mpc/aby3:type",
    ],
)

spu_cc_library(
    name = "type",
    srcs = ["type.cc"],
    hdrs = ["type.h"],
    deps = [
        "//libspu/core:type",
        "//libspu/mpc/common:pub2k",
    ],
)

spu_cc_test(
    name = "type_test",
    srcs = ["type_test.cc"],
    deps = [
        ":type",
    ],
)

spu_cc_library(
    name = "boolean",
    srcs = ["boolean.cc"],
    hdrs = ["boolean.h"],
    deps = [
        ":type",
        ":value",
        ":state", 
        "//libspu/core:platform_utils",
        "//libspu/mpc/common:ab_api",
        "//libspu/mpc/common:communicator",
        "//libspu/mpc/common:prg_state",
    ],
)

spu_cc_library(
    name = "conversion",
    srcs = ["conversion.cc"],
    hdrs = ["conversion.h"],
    deps = [
        ":value",
        ":type",
        ":state",
        "//libspu/core:platform_utils",
        "//libspu/mpc/common:ab_api",
        "//libspu/mpc/common:communicator",
        "//libspu/mpc/common:prg_state",
        "//libspu/mpc/utils:circuits",
    ],
)

spu_cc_library(
    name = "state",
    srcs = ["state.cc"],
    hdrs = ["state.h"],
    deps = [
        ":type",
        ":utils",
        ":value",
        "//libspu/mpc/aby3:protocol",
        "//libspu/mpc/common:prg_state",
        "//libspu/mpc/common:communicator",
        "@yacl//yacl/crypto/base/hash:blake3",
    ],
)

spu_cc_library(
    name = "value",
    srcs = ["value.cc"],
    hdrs = ["value.h"],
    deps = [
        ":type",
        "//libspu/core",
        "//libspu/mpc/utils:ring_ops",
    ],
)

spu_cc_library(
    name = "io",
    srcs = ["io.cc"],
    hdrs = ["io.h"],
    deps = [
        ":type",
        ":value",
        "//libspu/mpc:io_interface",
    ],
)

spu_cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [
        ":type",
    ],
)